# backend-for-frontend-micro

./: .gitignore  README.md  backend_for_frontend.py  cart.py  circuit_breaker.py  config.py  db.py  favorites.py  inventory.py  products.py  pyproject.toml  retry.py
tests/: test_cart.py  test_favorites.py  test_inventory.py  test_products.py  test_retry.py
