[project]
name = "backend-for-frontend-micro"
version = "0.1.0"
description = ""
authors = [
    {name = "georgiiviktorov",email = "nowayisleft@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiohttp (>=3.11.13,<4.0.0)",
    "environs (>=14.1.1,<15.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
